--- a/custom_components/hassam/manifest.json
+++ b/custom_components/hassam/manifest.json
@@ -7,9 +7,9 @@
     "integration_type": "hub",
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/kverqus/hassam/issues",
+    "quality_scale": "silver",
     "requirements": [
         "httpx>0.12.1"
     ],
-    "version": "0.1.0",
-    "quality_scale": "silver"
+    "version": "0.1.0"
 }
