--- a/custom_components/hassam/manifest.json
+++ b/custom_components/hassam/manifest.json
@@ -1,15 +1,13 @@
 {
-    "domain": "hassam",
-    "name": "SSAM Hämtschema",
-    "codeowners": ["@kverqus"],
-    "config_flow": true,
-    "documentation": "https://github.com/kverqus/hassam",
-    "integration_type": "hub",
-    "iot_class": "cloud_polling",
-    "issue_tracker": "https://github.com/kverqus/hassam/issues",
-    "quality_scale": "silver",
-    "requirements": [
-        "httpx>0.12.1"
-    ],
-    "version": "2.0.0"
+  "domain": "hassam",
+  "name": "SSAM Hämtschema",
+  "codeowners": ["@kverqus"],
+  "config_flow": true,
+  "documentation": "https://github.com/kverqus/hassam",
+  "integration_type": "hub",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/kverqus/hassam/issues",
+  "quality_scale": "silver",
+  "requirements": ["httpx>0.12.1"],
+  "version": "2.0.1"
 }
